--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "prox_automigrate"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.28.1"
 
 [tool.poetry.scripts]
 prox-am = "prox_automigrate.scripts.start:main"
