--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "prox_automigrate"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.28.1"
+paramiko = "^2.11.0"
+pyyaml = "^6.0"
 
 [tool.poetry.scripts]
 prox-am = "prox_automigrate.scripts.start:main"
